--- a/lib0.html
+++ b/lib0.html
@@ -126,6 +126,7 @@
 			  <ul class='page'>
 				<li></li>
 				<li>
+					<img src="./images/Screenshot 2024-11-16 164729.png"alt="" width="100%" height="100%">
 				  <a class="btn" href="./pdfs/عن الكتاب أصول الصناعة المعجمية.pdf">link</a>
 				</li>
 				<li></li>
