--- a/lib0.html
+++ b/lib0.html
@@ -124,7 +124,7 @@
 			  </ul>        
 			  <!-- Pages -->        
 			  <ul class='page'>
-				<li><a class="btn" href="./pdfs/عن الكتاب أصول الصناعة المعجمية.pdf">link</a></li>
+				<li></li>
 				<li>
 					<img src="./images/Screenshot 2024-11-16 164729.png"alt="" width="100%" height="100%">
 				  
@@ -144,8 +144,7 @@
 			  </ul>
 			  <figcaption>
 				<span>كتاب اصول الصناعة المعجمية </span>
-				<p> للمزيد عن الكتاب </p>
-			  </figcaption>
+				<a class="btn" href="./pdfs/عن الكتاب أصول الصناعة المعجمية.pdf">link</a>			  </figcaption>
 			</figure>
 		  </li>  
 		  <!-- Book 2 -->
