modified:   lib0.html

--- a/lib0.html
+++ b/lib0.html
@@ -144,7 +144,9 @@
 			  </ul>
 			  <figcaption>
 				<span>كتاب اصول الصناعة المعجمية </span>
-				<a class="btn" href="./pdfs/عن الكتاب أصول الصناعة المعجمية.pdf">link</a>			  </figcaption>
+				<p> للمزيد عن الكتاب </p>
+				<a class="btn" href="./pdfs/عن الكتاب أصول الصناعة المعجمية.pdf">link</a>
+			  </figcaption>
 			</figure>
 		  </li>  
 		  <!-- Book 2 -->
