new file:   images/Screenshot 2024-11-16 165700.png 	modified:   lib0.html

--- a/lib0.html
+++ b/lib0.html
@@ -163,7 +163,7 @@
 			  <ul class='page'>
 				<li></li>
 				<li>
-				  <a class="btn" href="./pdfs/10 - عن الكتاب نصوص وجسور.pdf">link</a>
+					<img src="./images/Screenshot 2024-11-16 165700.png"alt="" width="100%" height="100%">
 				</li>
 				<li></li>
 				<li></li>
@@ -181,6 +181,7 @@
 			  <figcaption>
 				<span>كتاب نصوص وجسور اللغة ومقارنة الاديان الجزء الاول</span>
 				<p>للمزيد عن الكتاب</p>
+				<a class="btn" href="./pdfs/10 - عن الكتاب نصوص وجسور.pdf">link</a>
 			  </figcaption>
 			</figure>
 		  </li>  
@@ -198,7 +199,7 @@
 			  <ul class='page'>
 				<li></li>
 				<li>
-				  <a class="btn" href="#">link</a>
+					<!-- <img src="./images/PHOTO-2024-11-12-09-53-10.JPG" alt="" width="100%" height="100%"> -->
 				</li>
 				<li></li>
 				<li></li>
@@ -216,6 +217,7 @@
 			  <figcaption>
 				<span>كتاب المعالجة الالية للغات والانسانيات</span>
 				<p>للمزيد عن الكتاب</p>
+				<a class="btn" href="#">link</a>
 			  </figcaption>
 			</figure>
 		  </li>
@@ -233,7 +235,7 @@
 			  <ul class='page'>
 				<li></li>
 				<li>
-				  <a class="btn" href="./pdfs/10 - عن الكتاب نصوص وجسور.pdf">link</a>
+					<img src="./images/Screenshot 2024-11-16 165700.png"alt="" width="100%" height="100%">
 				</li>
 				<li></li>
 				<li></li>
@@ -251,6 +253,8 @@
 			  <figcaption>
 				<span>كتاب نصوص وجسور اللغة ومقارنة الاديان الجزء الثاني</span>
 				<p>للمزيد عن الكتاب</p>
+				<a class="btn" href="./pdfs/10 - عن الكتاب نصوص وجسور.pdf">link</a>
+
 			  </figcaption>
 			</figure>
 		  </li>
