modified:   call.html 	modified:   cv0.html 	modified:   cv1.html 	modified:   cv2.html 	modified:   cv3.html 	modified:   cv4.html 	modified:   cv5.html 	modified:   cv6.html 	modified:   cv7.html 	modified:   cv8.html 	modified:   cv9.html 	new file:   images/profhaithm-zinhom-high-resolution-logo-grayscale-transparent.png 	modified:   index.html 	modified:   lib0.html 	modified:   lib1.html 	modified:   lib2.html 	modified:   lib3.html 	modified:   lib4.html 	deleted:    main.html 	modified:   manara0.html 	modified:   manara1.html 	modified:   manara2.html 	modified:   manara3.html 	modified:   media0.html 	modified:   media1.html 	modified:   media2.html 	modified:   media3.html 	modified:   media4.html 	modified:   media5.html

--- a/call.html
+++ b/call.html
@@ -44,9 +44,10 @@
             <div class="row">
                 <div class="col-11">
                     <nav class="main-nav">
-                            <a href="index.html">
-                                <h3>Prof.Haithm Zinhom</h3>
-                            </a>
+                        <!-- ***** Logo Start ***** -->
+                        <a href="index.html" class="logo">
+                            <img src="./images/profhaithm-zinhom-high-resolution-logo-grayscale-transparent.png"style="width: 200px; height: 80px;">
+                        </a>
                         
                         <!-- ***** Menu Start ***** -->
                         <div class="col-lg-10">
