--- a/media1.html
+++ b/media1.html
@@ -44,9 +44,10 @@
             <div class="row">
                 <div class="col-11">
                     <nav class="main-nav">
-                            <a href="index.html">
-                                <h3>Prof.Haithm Zinhom</h3>
-                            </a>
+                        <!-- ***** Logo Start ***** -->
+                        <a href="index.html" class="logo">
+                            <img src="./images/profhaithm-zinhom-high-resolution-logo-grayscale-transparent.png"style="width: 200px; height: 80px;">
+                        </a>
                         
                         <!-- ***** Menu Start ***** -->
                         <div class="col-lg-10">
