modified:   cv4.html 	modified:   lib0.html

--- a/cv4.html
+++ b/cv4.html
@@ -146,9 +146,9 @@
                   </div>
                 </li>
 
-                                <!-- Item 3 -->
+                                <!-- Item 4 -->
                 <li>
-                  <div class="direction-r">
+                  <div class="direction-l">
                     <div class="flag-wrapper">
                       <span class="hexa"></span>
                       <span class="flag">2021: 2018</span>
@@ -156,7 +156,7 @@
                     <div class="desc">رئيس كنترول الفرقة الثانية – مرحلة البكالوريوس- كلية الآداب – جامعة المنوفية  </div>
                   </div>
                 </li>
-                <!-- Item 3 -->
+                <!-- Item 5 -->
                 <li>
                     <div class="direction-r">
                       <div class="flag-wrapper">
@@ -166,9 +166,9 @@
                       <div class="desc">  (I.T) مدير وحدة الخدمات الالكترونية  بكلية الآداب – جامعة المنوفية   </div>
                     </div>
                   </li>
-                <!-- Item 3 -->
+                <!-- Item 6 -->
                 <li>
-                    <div class="direction-r">
+                    <div class="direction-l">
                       <div class="flag-wrapper">
                         <span class="hexa"></span>
                         <span class="flag">2014</span>
@@ -176,7 +176,7 @@
                       <div class="desc">نائب رئيس وحــدة الأزمــات والكوارث بكلية الآداب جامعة المنوفية. </div>
                     </div>
                   </li>
-                <!-- Item 3 -->
+                <!-- Item 7 -->
                 <li>
                     <div class="direction-r">
                       <div class="flag-wrapper">
@@ -186,9 +186,9 @@
                       <div class="desc">مدير وحدة الانتحال وكشف السرقات العلمية  بكلية الآداب – جامعة المنوفية. </div>
                     </div>
                   </li>
-                <!-- Item 3 -->
+                <!-- Item 8 -->
                 <li>
-                    <div class="direction-r">
+                    <div class="direction-l">
                       <div class="flag-wrapper">
                         <span class="hexa"></span>
                         <span class="flag">2014</span>
@@ -196,7 +196,7 @@
                       <div class="desc">عضو لجنة مندوبي الاتصال في الجامعات المصرية بوزارة التعليم العالي 	 </div>
                     </div>
                   </li>
-                <!-- Item 3 -->
+                <!-- Item 9 -->
                 <li>
                     <div class="direction-r">
                       <div class="flag-wrapper">
@@ -206,9 +206,9 @@
                       <div class="desc">منسق للجودة عن قسم اللغة العربية كلية الآداب جامعة المنوفية	 </div>
                     </div>
                   </li>
-                <!-- Item 3 -->
+                <!-- Item 10 -->
                 <li>
-                    <div class="direction-r">
+                    <div class="direction-l">
                       <div class="flag-wrapper">
                         <span class="hexa"></span>
                         <span class="flag">2006 : حتي الان</span>
