--- a/lib0.html
+++ b/lib0.html
@@ -146,7 +146,7 @@
 			  <figcaption>
 				<span>كتاب اصول الصناعة المعجمية </span>
 				<p> للمزيد عن الكتاب </p>
-				<a class="btn" href="./pdfs/عن الكتاب أصول الصناعة المعجمية.pdf">link</a>
+				<a class="btn" target="_blank" href="./pdfs/عن الكتاب أصول الصناعة المعجمية.pdf">link</a>
 			  </figcaption>
 			</figure>
 		  </li>  
@@ -182,7 +182,7 @@
 			  <figcaption>
 				<span>كتاب نصوص وجسور اللغة ومقارنة الاديان الجزء الاول</span>
 				<p>للمزيد عن الكتاب</p>
-				<a class="btn" href="./pdfs/10 - عن الكتاب نصوص وجسور.pdf">link</a>
+				<a class="btn" target="_blank" href="./pdfs/10 - عن الكتاب نصوص وجسور.pdf">link</a>
 			  </figcaption>
 			</figure>
 		  </li>  
@@ -218,7 +218,7 @@
 			  <figcaption>
 				<span>كتاب المعالجة الالية للغات والانسانيات</span>
 				<p>للمزيد عن الكتاب</p>
-				<a class="btn" href="#">link</a>
+				<a class="btn" target="_blank" href="#">link</a>
 			  </figcaption>
 			</figure>
 		  </li>
@@ -254,7 +254,7 @@
 			  <figcaption>
 				<span>كتاب نصوص وجسور اللغة ومقارنة الاديان الجزء الثاني</span>
 				<p>للمزيد عن الكتاب</p>
-				<a class="btn" href="./pdfs/10 - عن الكتاب نصوص وجسور.pdf">link</a>
+				<a class="btn" target="_blank" href="./pdfs/10 - عن الكتاب نصوص وجسور.pdf">link</a>
 
 			  </figcaption>
 			</figure>
