modified:   cv4.html 	modified:   cv5.html 	modified:   cv6.html 	modified:   cv7.html 	modified:   lib1.html 	modified:   lib2.html

--- a/cv4.html
+++ b/cv4.html
@@ -112,6 +112,7 @@
   	<br><br><br><br><br>
   	<section>
         <div class="container">
+            <h2 style="text-align: right;">التدرج الإداري</h2>
             <ul class="timeline">
                 <!-- Item 1 -->
                 <li>
