--- a/lib2.html
+++ b/lib2.html
@@ -109,8 +109,123 @@
             </div>
         </div>
     </header>
-  	
-  	
+  	<br><br><br><br><br>
+  	<section>
+        <div class="table-container">
+            <h2 style="text-align: right;">الأبحاث العلمية </h2>
+
+            <table>
+              <thead>
+                <tr>
+                  <th>سنة النشر</th>
+                  <th>حالة النشر</th>
+                  <th>تصنيفها</th>
+                  <th>دورية النشر</th>
+                  <th>نوع البحث</th>
+                  <th>اسم البحث</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>2024</td>
+                  <td> منشور</td>
+                  <td>scopus,Q1</td>
+                  <td>journal Acta Neophilologica</td>
+                  <td> فردي</td>
+                  <td>Negotiating War and Patriarchy The Praxis of Death and Violence in the Story of Zahra</td>
+                </tr>
+                <tr>
+                  <td>2024</td>
+                  <td>مقبول للنشر 12/ 2024م </td>
+                  <td>jSCOPUS Q1 Web Of Science Q1 </td>
+                  <td>SKASE Journal of Translation and Interpretation</td>
+                  <td> فردي</td>
+                  <td>Translation in the Arab-Islamic Histor
+                    An Avenue for the Culture of Tolerance and Knowledge Transfer Worldwid
+                   </td>
+                </tr>
+                <tr>
+                  <td>2024</td>
+                  <td>مقبول للنشر 12/ 2024</td>
+                  <td>SCOPUS
+                    Q2
+                    Web Of Science
+                    Q1
+                    </td>
+                  <td>Anafora </td>
+                  <td>فردي</td>
+                  <td>Active</td>
+                </tr>
+                <tr>
+                  <td>2024</td>
+                  <td> مقبول للنشر</td>
+                  <td>scopus,Q2</td>
+                  <td>VESTNIK ZA TUJE/ JOURNAL FOR FOREIGN LANGUAGES</td>
+                  <td>فردي</td>
+                  <td>The Challenges of Using Machine Translation in Rendering Arabic Texts into English: Applied Perspective</td>
+                </tr>
+                <tr>
+                  <td>2024</td>
+                  <td>منشور</td>
+                  <td>SCOPUS
+                    Q 1
+                    Web Of Science
+                    Q1
+                    </td>
+                  <td>WILEY</td>
+                  <td>مشترك</td>
+                  <td>Navigating Ethical Considerations in the Use of Artificialintelligence for Patient Care: A Systematic review</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+    </section>
   				
 </body>
+<style>
+    .table-container {
+      max-width: 1000px;
+      margin: auto;
+      overflow-x: auto;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    thead {
+      background-color: #929293;
+      color: #fff;
+    }
+
+    th, td {
+      text-align: left;
+      padding: 15px;
+      border-bottom: 1px solid #ddd;
+    }
+
+    th {
+      text-transform: uppercase;
+      font-size: 14px;
+    }
+
+    tr:hover {
+      background-color: #f1f1f1;
+    }
+
+    td {
+      font-size: 14px;
+    }
+
+    @media (max-width: 768px) {
+      th, td {
+        font-size: 12px;
+        padding: 10px;
+      }
+    }
+  </style>
 </html>
