--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <title>Prof. Haithm Zinhom</title>
 
   <!-- Additional CSS Files -->
-  <link rel="stylesheet" href="../mainstyle.css" />
-  <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="../assets/css/font-awesome.css">
-  <link rel="stylesheet" href="../assets/css/templatemo-hexashop.css">
-  <link rel="stylesheet" href="../assets/css/owl-carousel.css">
-  <link rel="stylesheet" href="../assets/css/lightbox.css">
+  <link rel="stylesheet" href="./mainstyle.css" />
+  <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/font-awesome.css">
+  <link rel="stylesheet" href="./assets/css/templatemo-hexashop.css">
+  <link rel="stylesheet" href="./assets/css/owl-carousel.css">
+  <link rel="stylesheet" href="./assets/css/lightbox.css">
 
   <!-- Custom CSS for Responsiveness -->
   <style>
