--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
       <div class="container">
       <div class="main-nav">
         <!-- ***** Logo Start ***** -->
-        <a href="../main/index.html" class="logo">
-          <img src="../images/profhaithm-zinhom-high-resolution-logo-grayscale-transparent.png" alt="Logo">
+        <a href="./main/index.html" class="logo">
+          <img src="./images/profhaithm-zinhom-high-resolution-logo-grayscale-transparent.png" alt="Logo">
         </a>
 
         <!-- ***** Menu Trigger for Mobile ***** -->
@@ -210,47 +210,47 @@
 <div class="col-lg-10">
     <ul class="nav">
        
-        <li class="scroll-to-section"><a href="../call/call.html" class="active">اتصل بنا</a></li>
+        <li class="scroll-to-section"><a href="./call/call.html" class="active">اتصل بنا</a></li>
         <li class="submenu">
             <a href="javascript:void(0);" class="submenu-link">الاعلام</a>
-            <ul class="submenu-items">                <li><a href="../media/media0.html">ارشيف الاخبار</a></li>
-                <li><a href="../media/media1.html">احدث الابحاث</a></li>
-                <li><a href="../media/media2.html">احدث الندوات</a></li>
-                <li><a href="../media/media3.html">احدث المحاضرات</a></li>
-                <li><a href="../media/media4.html">نشرة الابحاث</a></li>
-                <li><a href="../media/media5.html">المكتبة العامة</a></li>
+            <ul class="submenu-items">                <li><a href="./media/media0.html">ارشيف الاخبار</a></li>
+                <li><a href="./media/media1.html">احدث الابحاث</a></li>
+                <li><a href="./media/media2.html">احدث الندوات</a></li>
+                <li><a href="./media/media3.html">احدث المحاضرات</a></li>
+                <li><a href="./media/media4.html">نشرة الابحاث</a></li>
+                <li><a href="./media/media5.html">المكتبة العامة</a></li>
             </ul>
         </li>
         <li class="submenu">
             <a href="javascript:void(0);" class="submenu-link">المنارة</a>
-            <ul class="submenu-items">                <li><a href="../manara/manara0.html">فيديوهات</a></li>
-                <li><a href="../manara/manara1.html">الندوات والورش التدريبية</a></li>
-                <li><a href="../manara/manara2.html">المحاضرات العلمية</a></li>
-                <li><a href="../manara/manara3.html">مقالات</a></li>
+            <ul class="submenu-items">                <li><a href="./manara/manara0.html">فيديوهات</a></li>
+                <li><a href="./manara/manara1.html">الندوات والورش التدريبية</a></li>
+                <li><a href="./manara/manara2.html">المحاضرات العلمية</a></li>
+                <li><a href="./manara/manara3.html">مقالات</a></li>
             </ul>
         </li>
         <li class="submenu">
             <a href="javascript:void(0);" class="submenu-link">مكتبة ابن الهيثم</a>
-            <ul class="submenu-items">                <li><a href="../lib/lib0.html">الكتب والمصنفات</a></li>
-                <li><a href="../lib/lib1.html">قواعد البيانات</a></li>
-                <li><a href="../lib/lib2.html">الابحاث العلمية </a></li>
-                <li><a href="../lib/lib3.html">الكل</a></li>
-                <li><a href="../lib/lib4.html">خدمات ومنصات تعليمية</a></li>
+            <ul class="submenu-items">                <li><a href="./lib/lib0.html">الكتب والمصنفات</a></li>
+                <li><a href="./lib/lib1.html">قواعد البيانات</a></li>
+                <li><a href="./lib/lib2.html">الابحاث العلمية </a></li>
+                <li><a href="./lib/lib3.html">الكل</a></li>
+                <li><a href="./lib/lib4.html">خدمات ومنصات تعليمية</a></li>
             </ul>
         </li>
         <li class="submenu">
             <a href="javascript:void(0);" class="submenu-link">السيرة الذاتية</a>
             <ul class="submenu-items">
-                                <li><a href="../cv/cv0.html">البيانات الشخصية</a></li>
-                <li><a href="../cv/cv1.html">التخصص</a></li>
-                <li><a href="../cv/cv2.html">المؤهلات الدراسية</a></li>
-                <li><a href="../cv/cv3.html">التدرج الوظيفي</a></li>
-                <li><a href="../cv/cv4.html">التدرج الاداري</a></li>
-                <li><a href="../cv/cv5.html">الخبرات</a></li>
-                <li><a href="../cv/cv6.html">مشروعات مستقبلية</a></li>
-                <li><a href="../cv/cv7.html">وسائل التواصل</a></li>
-                <li><a href="../cv/cv8.html">تحميل سيرة ذاتية مفصلة</a></li>
-                <li><a href="../cv/cv9.html">تحميل سيرة ذاتية مختصرة</a></li>
+                                <li><a href="./cv/cv0.html">البيانات الشخصية</a></li>
+                <li><a href="./cv/cv1.html">التخصص</a></li>
+                <li><a href="./cv/cv2.html">المؤهلات الدراسية</a></li>
+                <li><a href="./cv/cv3.html">التدرج الوظيفي</a></li>
+                <li><a href="./cv/cv4.html">التدرج الاداري</a></li>
+                <li><a href="./cv/cv5.html">الخبرات</a></li>
+                <li><a href="./cv/cv6.html">مشروعات مستقبلية</a></li>
+                <li><a href="./cv/cv7.html">وسائل التواصل</a></li>
+                <li><a href="./cv/cv8.html">تحميل سيرة ذاتية مفصلة</a></li>
+                <li><a href="./cv/cv9.html">تحميل سيرة ذاتية مختصرة</a></li>
             </ul>
         </li>
     </ul>  
@@ -276,7 +276,7 @@
                         </p>
                     </div>
                     <div class="main-border-button">
-                        <a href="../cv/cv0.html">Discover More</a>
+                        <a href="./cv/cv0.html">Discover More</a>
                     </div>
                 </div>
             </div>
@@ -284,7 +284,7 @@
                 <div class="right-content"style="background-color: white;">
                     <div class="row">
                         <a href="#" class="photo">
-                        <img src="../images/PHOTO-2024-11-12-09-39-12.jpg" style="width: 100%; height: 100%;">
+                        <img src="./images/PHOTO-2024-11-12-09-39-12.jpg" style="width: 100%; height: 100%;">
                         <div class="glow-wrap">
                             <i class="glow"></i>
                           </div>
@@ -311,21 +311,21 @@
                 <div class="service-item">
                     <h4>مكتبة ابن الهيثم</h4>
                     <p>Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed do eiusmod temp incididunt ut labore, et dolore quis ipsum suspend.</p>
-                    <img src="../assets/images/service-01.jpg" alt="">
+                    <img src="./assets/images/service-01.jpg" alt="">
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="service-item">
                     <h4>المنارة</h4>
                     <p>Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed do eiusmod temp incididunt ut labore, et dolore quis ipsum suspend.</p>
-                    <img src="../assets/images/service-02.jpg" alt="">
+                    <img src="./assets/images/service-02.jpg" alt="">
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="service-item">
                     <h4>الاعلام</h4>
                     <p>Lorem ipsum dolor sit amet, consecteturti adipiscing elit, sed do eiusmod temp incididunt ut labore, et dolore quis ipsum suspend.</p>
-                    <img src="../assets/images/service-01.jpg" alt="">
+                    <img src="./assets/images/service-01.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -529,16 +529,16 @@
                 <div class="col-lg-3">
                     <h4>Useful Links</h4>
                     <ul>
-                        <li><a href="../cv/cv0.html">السيرة الذاتية</a></li>
-                        <li><a href="../lib/lib0.html">مكتبة ابن الهيثم</a></li>
-                        <li><a href="../manara/manara0.html">المنارة</a></li>
-                        <li><a href="../media/media0.html"> الاعلام</a></li>
+                        <li><a href="./cv/cv0.html">السيرة الذاتية</a></li>
+                        <li><a href="./lib/lib0.html">مكتبة ابن الهيثم</a></li>
+                        <li><a href="./manara/manara0.html">المنارة</a></li>
+                        <li><a href="./media/media0.html"> الاعلام</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
                     <h4>Help &amp; Information</h4>
                     <ul>
-                        <li><a href="../call/call.html">اتصل بنا</a></li>
+                        <li><a href="./call/call.html">اتصل بنا</a></li>
                     </ul>
                 </div>
 
@@ -601,17 +601,17 @@
   }
   
   .card--1 .card__img, .card--1 .card__img--hover {
-      background-image: url('../assets/images/about-us-page-heading.jpg');
+      background-image: url('./assets/images/about-us-page-heading.jpg');
   }
   
   .card--2 .card__img, .card--2 .card__img--hover {
-      background-image: url('../assets/images/about-us-page-heading.jpg');
+      background-image: url('./assets/images/about-us-page-heading.jpg');
   }
   .card--3 .card__img, .card--3 .card__img--hover {
-      background-image: url('../assets/images/about-us-page-heading.jpg');
+      background-image: url('./assets/images/about-us-page-heading.jpg');
   }
   .card--4 .card__img, .card--4 .card__img--hover {
-      background-image: url('../assets/images/about-us-page-heading.jpg');
+      background-image: url('./assets/images/about-us-page-heading.jpg');
   }
   
   .card__like {
