modified:   main/index.html

--- a/main/index.html
+++ b/main/index.html
@@ -439,8 +439,7 @@
       </div>
     </div>
   </header>
-    <!-- ***** Header Area End ***** -->
-    <br> <br> 
+    <!-- ***** Header Area End ***** --> <br> 
    <!-- ***** Explore Area Starts ***** -->
    <section class="section" id="explore" style="background-color: rgb(228, 228, 228);">
     <div class="main-banner" id="top">
@@ -449,16 +448,12 @@
             <div class="col-lg-6">
                 <div class="left-content">
                     <h2>Prof.Haithm Zinhom</h2>
+                    <div class="quote">
+                      <i class="fa fa-quote-left"></i><p>
                     <span style="font-size: medium; color: #333;">د. هيثم زينهم مرسى برغوث
                         أستاذ مشارك في جامعة محمد بن زايد للعلوم الإنسانية </span>
                     <span style="font-size: medium;color: #333;">أستاذ مساعد  في قسم اللغة العربــية كلية الآداب جامعة المنوفية 2013م</span>
-                    <div class="quote">
-                        <i class="fa fa-quote-left"></i><p>
-                            <!--  -->
                         </p>
-                    </div>
-                    <div class="main-border-button">
-                        <a href="../cv/cv0.html">Discover More</a>
                     </div>
                 </div>
             </div>
